# firefront-gis

./: .gitignore  Cargo.toml  README.md  styles.css
src/: app.rs  documentation.rs  home.rs  loading.rs  main.rs  new_project.rs  project.rs  settings.rs  sidebar.rs  types.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: regions_graph.json
src-tauri/src/: app_setup.rs  commands.rs  dependency.rs  gis_processing.rs  lib.rs  main.rs  slicing.rs  utils.rs  web_request.rs
src-tauri/src/gis_operation/: layers.rs  mod.rs  processing.rs  regions.rs  slicing.rs
src-tauri/tests/: dependency_tests.rs  gdal_test.rs  gis_processing_tests.rs  integration_tests.rs  regions_tests.rs  slicing_tests.rs  unit_test.rs  utils_tests.rs  web_request_tests.rs
src-tauri/tests/common/: mod.rs
