[package]
name = "firefront-gis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "firefront_gis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
reqwest = { version = "0.12.15", features = ["stream"] }
tokio = { version = "1.44", features = ["full"] }
scraper = "0.23.1"
futures-util = "0.3.31"
base64 = "0.22.1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
gdal = "0.18.0"
gdal-sys = "0.11.0"
image = "0.25.6"
